--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* max-width: 800px; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Animation */
+
+.link{
+  padding: 4px 6px;
+}
+.link:hover{
+  color: white;
+  background: blue;
+  padding: 4px 6px;
+}
+
+.active{
+  color: white !important;
+  background: blue;
+  padding: 4px 6px;
 }
