--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  max-width: 1440px;
+}
+
 body {
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,7 +20,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -45,7 +52,7 @@ code {
   animation: lds-spinner 1.2s linear infinite;
 }
 .lds-spinner div:after {
-  content: ' ';
+  content: " ";
   display: block;
   position: absolute;
   top: 3px;
@@ -53,7 +60,7 @@ code {
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: #FF5C00;
+  background: #ff5c00;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
@@ -114,10 +121,10 @@ code {
 
 .laglag {
   /* background-image: url("https://www.vasiti.com/icon/footer/subscribe-banner.svg"); */
-  background-image: url('./assets/banner.svg');
+  background-image: url("./assets/banner.svg");
 }
 
-input[type='file'] {
+input[type="file"] {
   background-color: transparent;
   color: black;
 }
@@ -134,5 +141,3 @@ input[type='file'] {
   color: black;
   padding: 8px 16px;
 } */
-
-
