--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,13 @@
 
 * {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   box-sizing: border-box;
-  max-width: 1440px;
+  max-width: 1280px;
 }
 
 body {
-  margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -128,16 +125,3 @@ input[type="file"] {
   background-color: transparent;
   color: black;
 }
-
-/* input[type=file] {
-  color: transparent;
-} */
-/* input[type=file]::-webkit-file-upload-button {
-  visibility: hidden;
-} */
-
-/* input[type=file]::before{
-  content: "Choose Image";
-  color: black;
-  padding: 8px 16px;
-} */
